Bug 146223 - FILEOPEN PPTX In PP master objects are appear in first slide
Summary: FILEOPEN PPTX In PP master objects are appear in first slide
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords: filter:pptx
: 105395 (view as bug list)
Depends on:
Blocks: PPTX-MasterSlide
  Show dependency treegraph
 
Reported: 2021-12-14 10:16 UTC by NISZ LibreOffice Team
Modified: 2022-02-14 14:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from with 2 slides (262.36 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-12-14 10:18 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-12-14 10:16:42 UTC
Description:
Attached file contains a 2 slides with master objects. After opening in PPTX master objects are shown but it should have not to.

Steps to Reproduce:
1.Open attached file

Actual Results:
Master objects are shown at first slide

Expected Results:
It should not shown


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5242061cca5332ec15cce8c76f070d16e857445d
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-12-14 10:18:05 UTC
Created attachment 176924 [details]
Example file from with 2 slides
Comment 2 Commit Notification 2022-01-03 12:42:19 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4574a1ea408c2ac30042dca32d02207ec7add4da

tdf#146223 PPTX import: fix master objects visible property

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-01-04 09:47:06 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/3698a523d7ce3278ac4e285e32d737951f317978

tdf#146223 PPTX import: fix master objects visible property

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-01-10 12:26:02 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b4a281af53efa0c36ee1770e6cf4d800be77a6d2
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 5 Gabor Kelemen (Collabora) 2022-02-14 14:56:05 UTC
*** Bug 105395 has been marked as a duplicate of this bug. ***