tdf#146223 PPTX import: fix master objects visible property

Change-Id: Idc5260718f2916e207f751286044e9a7fabdee89